deprecation: fix admin announcement and reload warnings